test/negative/parse_missing_end_for.mut
# Negative: missing 'end' to close for
for i:i64 in range(10)
    print(i)
